--- a/GUI/web/templates/results.html
+++ b/GUI/web/templates/results.html
@@ -112,6 +112,22 @@
                                 </div>
                             </div>
                         </div>
+                        
+                        <!-- Action Buttons for Analysis and Download -->
+                        <div class="mt-3">
+                            <div class="btn-toolbar">
+                                <div class="btn-group me-2">
+                                    <a href="{{ url_for('download_csv', session_id=session_id) }}" class="btn btn-primary">
+                                        <i class="bi bi-download"></i> Download CSV
+                                    </a>
+                                </div>
+                                <div class="btn-group">
+                                    <a href="{{ url_for('simple_streamlit', session_id=session_id) }}" class="btn btn-success">
+                                        <i class="bi bi-bar-chart-fill"></i> KPI Dashboard
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -161,17 +177,6 @@
             </div>
         </div>
         {% endif %}
-
-        <!-- Action Buttons -->
-        <div class="row mb-3">
-            <div class="col-md-12">
-                <div class="btn-group" role="group">
-                    <a href="{{ url_for('index') }}" class="btn btn-secondary">Upload More Files</a>
-                    <a href="{{ url_for('merge_files', session_id=session_id) }}" class="btn btn-primary">Merge Files</a>
-                    <a href="{{ url_for('download_csv', session_id=session_id) }}" class="btn btn-success">Download CSV</a>
-                </div>
-            </div>
-        </div>
 
         <!-- Transactions Table -->
         <div class="row">
