--- a/GUI/web/templates/footer.html
+++ b/GUI/web/templates/footer.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
-    <hr>
+    <hr style="border-color: #203e5a;">
     <footer class="py-3 my-4">
-        <p class="text-center text-muted">
+        <p class="text-center" style="color: #a0c0e0;">
             {{ app_name }} v{{ app_version }} &copy; {{ app_author }} - 2024
         </p>
     </footer>
